<resources>
    <string name="app_name">BreakFood</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textHome">Breakfood Hamburguesas</string>
    <string name="textTittleComments">Deja un comentario</string>
    <string name="btSaveComment">Guardar Comentario</string>
    <string name="hintComment">Escribe tu comentario</string>
    <string name="textTitleAdmin">Mi Perfil</string>
    <string name="hintName">Nombre</string>
    <string name="hintAddress1">Dirección 1</string>
    <string name="hintAddress2">Dirección 2</string>
    <string name="hintPhone">Teléfono</string>
    <string name="hintMail">Email</string>
    <string name="btSaveAdmin">Guardar Cambios</string>
    <string name="btBuyProduct">Guardar Cambios</string>
    <string name="textLogin">Inicio de sesión</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="btnSignup">Regístrate</string>
    <string name="btnModificar">Editar</string>
</resources>