<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.CommentsDetailDialogFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Toolbar
            android:id="@+id/toolbarComments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/cardCornerRadius"
                    app:cardElevation="@dimen/cardElevation"
                    android:layout_margin="@dimen/defaultLayoutMargin">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/tvComments"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/textTittleComments"
                            android:textStyle="bold"
                            android:gravity="center_horizontal"
                            android:textSize="@dimen/sizeTitleComments"
                            android:textColor="@color/black"/>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="horizontal">
                                <TextView
                                    android:id="@+id/tvItemCommentsUser"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="puntos"
                                    android:gravity="left|top"
                                    android:textSize="@dimen/itemCommentsUser"
                                    android:textColor="@color/black"/>
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:layout_marginLeft="@dimen/defaultLayoutMargin">
                                <Spinner
                                    android:id="@+id/spinnerScores"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"/>
                            </LinearLayout>
                        </LinearLayout>
                        <EditText
                        android:id="@+id/etComments"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/defaultLayoutMargin"
                        android:hint="@string/hintComment"
                        android:inputType="textMultiLine"
                        android:gravity="center_horizontal"/>

                        <Button
                            android:id="@+id/btSaveComment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:background="@color/black"
                            android:text="@string/btSaveComment"
                            android:textColor="@color/white"
                            android:layout_marginTop="@dimen/defaultLayoutMargin"/>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>