<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_grey"
    tools:context=".view.ui.fragments.loginFragment.LoginFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/defaultLayoutMargin"
                apps:cardCornerRadius="@dimen/cardCornerRadius"
                apps:cardElevation="@dimen/cardElevation">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/background_grey"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitleAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/defaultLayoutMargin"
                        android:gravity="center_horizontal"
                        android:text="@string/textLogin"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textTItle"
                        android:textStyle="bold" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/heightImageProduct"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="@dimen/defaultLayoutMargin"
                        android:background="@drawable/rounded_rectangle"
                        android:src="@mipmap/ic_launcher" />

                    <EditText
                        android:id="@+id/edNameAdmin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/defaultLayoutMargin"
                        android:layout_marginTop="@dimen/defaultLayoutMargin"
                        android:layout_marginRight="@dimen/defaultLayoutMargin"
                        android:background="@drawable/rounded_rectangle"
                        android:padding="15dp"
                        android:hint="Correo"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSizeAdmin"
                        android:inputType="textEmailAddress"/>

                    <EditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/defaultLayoutMargin"
                        android:layout_marginTop="@dimen/defaultLayoutMargin"
                        android:layout_marginRight="@dimen/defaultLayoutMargin"
                        android:background="@drawable/rounded_rectangle"
                        android:padding="15dp"
                        android:hint="Contraseña"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSizeAdmin"
                        android:inputType="textPassword"/>

                    <Button
                        android:id="@+id/btn_login"
                        app:layout_constraintBottom_toTopOf="@+id/navigate_action_button"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/text"
                        app:layout_constraintVertical_bias="0.594"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/rounded_corner"
                        android:text="@string/btnLogin" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginLeft="@dimen/defaultLayoutMargin"
                        android:layout_marginTop="@dimen/defaultLayoutMargin"
                        android:layout_marginRight="@dimen/defaultLayoutMargin"
                        android:padding="15dp"
                        android:text="Si aun no tiene una cuenta"
                        android:textColor="@color/black"
                        android:textSize="@dimen/textSizeSignup" />

                    <Button
                        android:id="@+id/btn_Signup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/rounded_corner"
                        android:text="@string/btnSignup" />



                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>